--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
+    "antd": "^3.10.2",
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
+    "antd": "^3.12.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
